# shortbot

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
bot/: __init__.py
bot/core/: __init__.py  binance_rest.py  binance_ws.py  demo_exchange.py  engine.py  portfolio.py  risk.py  signals.py
bot/services/: __init__.py  notifier.py  scheduler.py  telegram_service.py
bot/tests/: __init__.py  test_config.py  test_demo_exchange.py  test_engine.py  test_signals.py
bot/ui/: __init__.py  app.py  main_window.py
bot/ui/widgets/: __init__.py  api_widget.py  risk_widget.py  signal_monitoring_widget.py  strategy_widget.py
bot/utils/: __init__.py  config.py  encryption.py  exceptions.py  logger.py
