[tool.poetry]
name = "shortbot"
version = "1.0.0"
description = "Kripto para short işlem botu - Parametrik, stop-loss'suz, sabit 1 USDT short pozisyon açan bot"
authors = ["ShortBot Team"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pyside6 = "^6.6.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
aiohttp = "^3.9.0"
websockets = "^12.0"
ccxt = "^4.2.0"
pandas = "^2.1.0"
numpy = "^1.25.0"
talib-binary = "^0.4.19"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
aiogram = "^3.4.0"
cryptography = "^41.0.7"
keyring = "^24.3.0"
plotly = "^5.17.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
flake8 = "^6.1.0"
freezegun = "^1.2.2"

[tool.poetry.scripts]
shortbot = "bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["bot/tests"]
addopts = "--cov=bot --cov-report=xml --cov-report=term-missing" 